--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     </div>
 
     <style>
+        .circle {
+            border: 1px solid black;
+            background-color: rgba(225, 225, 225, 1);
+            border-radius: 100%;
+            width: 800px;
+            height: 800px;
+        }
         .flex-center {
             display: flex;
             align-items: center;
@@ -54,23 +61,102 @@
         }
         .island img.substep-visible {
             filter: blur(0);
-            box-shadow: -50px 50px 250px 0 black;
-            padding: 20px;
-            border-radius: 83px;
         }
     </style>
 
+    <!-- 
+
+            (0, -1600)
+     (-800, -800)(800, -800)
+    (-1600, 0)       (1600, 0)
+      (-800, 800)(800, 800)
+           (0, 1600)
+
+     -->
+
     <div id="impress">
-        <div class="step slide flex-center" data-x="0" data-y="-1500">
+        <div class="step slide flex-center" data-x="0" data-y="0" data-z="0">
             <img src="./assets/logo.png" alt="">
         </div>
-        <div class="step flex-center island" data-x="0" data-y="-1500" data-z="-5000">
-            <img src="./assets/island.png" alt="" class="substep">
+        <div id="overview-1" class="step" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-scale="5"></div>
+        <div id="sideview-1" class="step" data-x="0" data-y="2400" data-z="200" data-rotate-x="-90" data-scale="5">Level 1</div>
+        <div id="sideview-2" class="step" data-x="0" data-y="2400" data-z="-1400" data-rotate-x="-90" data-scale="5">Level 2</div>
+        <div id="sideview-3" class="step" data-x="0" data-y="2400" data-z="-3000" data-rotate-x="-90" data-scale="5">Level 3</div>
+        <div class="step flex-center circle" data-x="0" data-y="-1600" data-z="0">
+            content
         </div>
-        <!-- <div class="step flex-center island" data-x="0" data-y="-1500" data-z="-5000"></div> -->
+        <div class="step flex-center circle" data-x="800" data-y="-800" data-z="0">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="1600" data-y="0" data-z="0">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="800" data-y="800" data-z="0">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="0" data-y="1600" data-z="0">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-800" data-y="800" data-z="0">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-1600" data-y="0" data-z="0">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="0">
+            content
+        </div>
 
-        <div id="overview" class="step" data-x="3000" data-y="1500" data-z="0" data-scale="10">
+        <div class="step flex-center circle" data-x="0" data-y="-1600" data-z="-1600">
+            content
         </div>
+        <div class="step flex-center circle" data-x="800" data-y="-800" data-z="-1600">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="1600" data-y="0" data-z="-1600">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="800" data-y="800" data-z="-1600">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="0" data-y="1600" data-z="-1600">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-800" data-y="800" data-z="-1600">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-1600" data-y="0" data-z="-1600">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="-1600">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="0" data-y="-1600" data-z="-3200">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="800" data-y="-800" data-z="-3200">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="1600" data-y="0" data-z="-3200">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="800" data-y="800" data-z="-3200">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="0" data-y="1600" data-z="-3200">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-800" data-y="800" data-z="-3200">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-1600" data-y="0" data-z="-3200">
+            content
+        </div>
+        <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="-3200">
+            content
+        </div>
+        
+
 
     </div>
 
