--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body class="impress-not-supported">
+    <div class="bg"></div>
 
     <div class="fallback-message">
         <p>Your browser
@@ -42,27 +43,7 @@
             <b>Firefox</b> browser.</p>
     </div>
 
-    <style>
-        .circle {
-            border: 1px solid black;
-            background-color: rgba(225, 225, 225, 1);
-            border-radius: 100%;
-            width: 800px;
-            height: 800px;
-        }
-        .flex-center {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .island img.substep {
-            filter: blur(10px);
-            transition: all 0.5s;
-        }
-        .island img.substep-visible {
-            filter: blur(0);
-        }
-    </style>
+
 
     
 
@@ -71,6 +52,11 @@
             (0, -1600)
      (-800, -800)(800, -800)
     (-1600, 0)       (1600, 0)
+      (-800, 800)(800, 800)
+           (0, 1600)
+
+            (0, -1600)
+     (-800, -800)(800, -800)
       (-800, 800)(800, 800)
            (0, 1600)
 
@@ -93,9 +79,6 @@
         <div class="step flex-center circle" data-x="800" data-y="-800" data-z="0">
             content
         </div>
-        <div class="step flex-center circle" data-x="1600" data-y="0" data-z="0">
-            content
-        </div>
         <div class="step flex-center circle" data-x="800" data-y="800" data-z="0">
             content
         </div>
@@ -103,9 +86,6 @@
             content
         </div>
         <div class="step flex-center circle" data-x="-800" data-y="800" data-z="0">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-1600" data-y="0" data-z="0">
             content
         </div>
         <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="0">
@@ -130,31 +110,16 @@
         <div class="step flex-center circle" data-x="-800" data-y="800" data-z="-1600">
             content
         </div>
-        <div class="step flex-center circle" data-x="-1600" data-y="0" data-z="-1600">
-            content
-        </div>
         <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="0" data-y="-1600" data-z="-3200">
             content
         </div>
         <div class="step flex-center circle" data-x="800" data-y="-800" data-z="-3200">
             content
         </div>
-        <div class="step flex-center circle" data-x="1600" data-y="0" data-z="-3200">
-            content
-        </div>
         <div class="step flex-center circle" data-x="800" data-y="800" data-z="-3200">
             content
         </div>
-        <div class="step flex-center circle" data-x="0" data-y="1600" data-z="-3200">
-            content
-        </div>
         <div class="step flex-center circle" data-x="-800" data-y="800" data-z="-3200">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-1600" data-y="0" data-z="-3200">
             content
         </div>
         <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="-3200">
