--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="../assets/logo.png" alt="">
         </div>
         <div class="step slide flex-center" data-x="0" data-y="0" data-z="1600">
-            <canvas id='beadAnimation' width='1600' height='1280' style="width: 800px; height: 640px;"></canvas>
+            <canvas id='beadAnimation'></canvas>
         </div>
         <div id="overview-1" class="step" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-scale="5"></div>
         <div id="sideview-1" class="step" data-x="0" data-y="2400" data-z="200" data-rotate-x="-90" data-scale="5">Level 1</div>
