--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <div id="overview-1" class="step" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-scale="5">
         </div>
         <div class="step flex-center circle intro-circle" data-x="0" data-y="-1600" data-z="0" data-steps="4">
-            <img src="../assets/logo.png" class="logo" alt="">
-            <img src="../assets/lightScatter.svg" class="lightScatter" alt="" preserveAspectRatio="none">
+            <img src="./assets/logo.png" class="logo" alt="">
+            <img src="./assets/lightScatter.svg" class="lightScatter" alt="" preserveAspectRatio="none">
             <div class="ocean">
-                <img src="../assets/piller-g.svg" alt="" class="pill g">
-                <img src="../assets/piller-b.svg" alt="" class="pill b">
+                <img src="./assets/piller-g.svg" alt="" class="pill g">
+                <img src="./assets/piller-b.svg" alt="" class="pill b">
             </div>
             <div class="sun"></div>
         </div>
