--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>iGEM Stockholm presentation 2018</title>
 
-    <meta name="description" content="iGEM Stockholm presentation 2018"
-    />
+    <meta name="description" content="iGEM Stockholm presentation 2018" />
 
     <link href="//fonts.googleapis.com/css?family=Roboto+Mono|Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic"
         rel="stylesheet" />
     <script type="text/javascript" src="https://mbostock.github.io/d3/talk/20111018/d3/d3.js"></script>
     <script type="text/javascript" src="https://mbostock.github.io/d3/talk/20111018/d3/d3.geom.js"></script>
     <script type="text/javascript" src="https://mbostock.github.io/d3/talk/20111018/d3/d3.layout.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://mbostock.github.io/d3/talk/20111018/style.css" />
-    <!-- <link href="../css/impress-demo.css" rel="stylesheet" /> -->
 
     <link rel="shortcut icon" href="../favicon.png" />
     <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
@@ -41,88 +38,84 @@
      -->
 
     <div id="pageNumber">
-        <div id="slideTitle">Mechanism</div>
-        <div id="slideNumber">Slide: <span class="value">#2</span></div>
+        <div class="slide-title" id="current-slide-title">Mechanism</div>
+        <div class="slide-number">Slide: <span class="value" id="current-slide">#2</span></div>
     </div>
     <div id="impress">
-        <div class="step flex-center circle intro-circle" data-x="0" data-y="-1600" data-z="0" data-steps="4">
-            <img src="./assets/logo.png" class="logo" alt="">
-            <svg
-                id="Layer_1"
-                data-name="Layer 1"
-                class="lightScatter"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 119.44 87.91"
-                preserveAspectRatio="none"
-                >
-                <defs>
-                    <style>.cls-1{fill:#f36f21;stroke:#f36f21;stroke-miterlimit:10;}</style>
-                </defs>
+        <div data-title="Introduction" class="step flex-center circle intro-circle" data-x="0" data-y="-1600" data-z="0"
+            data-steps="7">
+            <img src="./assets/introduction/logo.png" class="logo" alt="">
+            <svg id="Layer_1" data-name="Layer 1" class="lightScatter" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 119.44 87.91"
+                preserveAspectRatio="none">
                 <title>Solreflektion transp</title>
-                <polyline class="cls-1" points="25.34 19.27 3.44 13.26 33.93 19.27 10.74 20.56 44.66 27 16.75 27 42.09 33.87 27.91 33.87 51.1 39.45 91.9 39.45 59.38 29.15 105.64 30.01 71.72 21.42 113.8 16.27 86.31 10.9 117.04 8.54 81.16 4.52 119.38 0.5 0 0.5"/>
-                <polygon class="cls-1" points="31.56 53.36 87.71 51.88 65.78 57.19 31.56 53.36"/>
-                <polygon class="cls-1" points="32.56 67.26 71.86 67.26 37.78 71.89 32.56 67.26"/>
-                <polygon class="cls-1" points="77.22 81.63 56.23 81.63 84.88 86.99 77.22 81.63"/>
+                <polyline class="cls-1" points="25.34 19.27 3.44 13.26 33.93 19.27 10.74 20.56 44.66 27 16.75 27 42.09 33.87 27.91 33.87 51.1 39.45 91.9 39.45 59.38 29.15 105.64 30.01 71.72 21.42 113.8 16.27 86.31 10.9 117.04 8.54 81.16 4.52 119.38 0.5 0 0.5" />
+                <polygon class="cls-1" points="31.56 53.36 87.71 51.88 65.78 57.19 31.56 53.36" />
+                <polygon class="cls-1" points="32.56 67.26 71.86 67.26 37.78 71.89 32.56 67.26" />
+                <polygon class="cls-1" points="77.22 81.63 56.23 81.63 84.88 86.99 77.22 81.63" />
             </svg>
             <div class="ocean">
-                <img src="./assets/piller-g.svg" alt="" class="pill g">
-                <img src="./assets/piller-b.svg" alt="" class="pill b">
+                <div class="pillwrapper g">
+                    <img src="./assets/introduction/piller-g.svg" alt="" class="pill">
+                </div>
+                <div class="pillwrapper b">
+                    <img src="./assets/introduction/piller-b.svg" alt="" class="pill">
+                </div>
+            </div>
+            <div class="text-wrapper upper">
+                <div class="vertical"></div>
+                <div class="content">
+                    <div class="text">
+                        Adversely affects organisms
+                    </div>
+                    <div class="horizontal"></div>
+                </div>
+            </div>
+            <div class="text-wrapper lower">
+                <div class="vertical"></div>
+                <div class="content">
+                    <div class="horizontal"></div>
+                    <div class="text">
+                        Affects environments and ecosystems
+                    </div>
+                </div>
             </div>
             <div class="sun"></div>
+            <div class="ecotoxicity">
+                <h1>Ecotoxicity</h1>
+            </div>
+
+            <div class="graph">
+                <svg id="graph-1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 317.16 214.93">
+                    <title>Grey Graph</title>
+                    <line class="cls-1" x1="61.57" y1="84.56" x2="61.57" y2="172.31" />
+                    <line class="cls-1" x1="61.57" y1="172.31" x2="243.38" y2="172.31" />
+                    <rect class="cls-2" x="112.85" y="131.06" width="10.03" height="39.82" />
+                    <rect class="cls-2" x="132.9" y="127.28" width="10.03" height="43.61" />
+                    <rect class="cls-2" x="152.95" y="120.06" width="10.03" height="50.83" />
+                    <rect class="cls-2" x="173" y="105.74" width="10.03" height="65.14" />
+                    <rect class="cls-2" x="72.74" y="152" width="10.03" height="18.88" />
+                    <rect class="cls-2" x="92.79" y="132.84" width="10.03" height="38.05" />
+                    <rect class="cls-2" x="193.05" y="92.61" width="10.03" height="78.28" />
+                    <rect class="cls-2" x="213.11" y="71.9" width="10.03" height="98.98" />
+                    <line class="cls-1" x1="62.05" y1="83.85" x2="62.05" y2="171.6" />
+                    <line class="cls-1" x1="62.05" y1="171.6" x2="243.85" y2="171.6" />
+                    <rect class="cls-2" x="113.32" y="130.35" width="10.03" height="39.82" />
+                    <rect class="cls-2" x="133.38" y="126.57" width="10.03" height="43.61" />
+                    <rect class="cls-2" x="153.43" y="119.35" width="10.03" height="50.83" />
+                    <rect class="cls-2" x="173.48" y="105.03" width="10.03" height="65.14" />
+                    <rect class="cls-2" x="73.22" y="151.29" width="10.03" height="18.88" />
+                    <rect class="cls-2" x="93.27" y="132.13" width="10.03" height="38.05" />
+                    <rect class="cls-2" x="193.53" y="91.9" width="10.03" height="78.28" />
+                    <rect class="cls-2" x="213.58" y="71.19" width="10.03" height="98.98" />
+                </svg>
+            </div>
         </div>
-        <div id="overview-1" class="step" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-scale="5">
+        <div id="overview-1" data-title="Overview" class="step" data-x="0" data-y="0" data-z="0" data-rotate-x="0"
+            data-scale="5">
         </div>
-        <div class="step flex-center circle" data-x="800" data-y="-800" data-z="0">
+        <div class="step flex-center circle" data-title="test" data-x="800" data-y="-800" data-z="0">
             <canvas id='beadAnimation'></canvas>
         </div>
-        <div class="step flex-center circle" data-x="800" data-y="800" data-z="0">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="0" data-y="1600" data-z="0">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-800" data-y="800" data-z="0">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="0">
-            content
-        </div>
-
-        <div class="step flex-center circle" data-x="0" data-y="-1600" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="800" data-y="-800" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="1600" data-y="0" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="800" data-y="800" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="0" data-y="1600" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-800" data-y="800" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="-1600">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="800" data-y="-800" data-z="-3200">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="800" data-y="800" data-z="-3200">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-800" data-y="800" data-z="-3200">
-            content
-        </div>
-        <div class="step flex-center circle" data-x="-800" data-y="-800" data-z="-3200">
-            content
-        </div>
-        
-
 
     </div>
 
