--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <meta name="description" content="iGEM Stockholm presentation 2018" />
 
-    <link href="//fonts.googleapis.com/css?family=Roboto+Mono|Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic"
-        rel="stylesheet" />
+    <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <script type="text/javascript" src="https://mbostock.github.io/d3/talk/20111018/d3/d3.js"></script>
     <script type="text/javascript" src="https://mbostock.github.io/d3/talk/20111018/d3/d3.geom.js"></script>
     <script type="text/javascript" src="https://mbostock.github.io/d3/talk/20111018/d3/d3.layout.js"></script>
@@ -43,7 +42,7 @@
     </div>
     <div id="impress">
         <div data-title="Introduction" class="step flex-center circle intro-circle" data-x="0" data-y="-1600" data-z="0"
-            data-steps="7">
+            data-steps="9">
             <img src="./assets/introduction/logo.png" class="logo" alt="">
             <svg id="Layer_1" data-name="Layer 1" class="lightScatter" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 119.44 87.91"
                 preserveAspectRatio="none">
@@ -84,6 +83,15 @@
                 <h1>Ecotoxicity</h1>
             </div>
 
+            <div class="abr">
+                <h1 class="first">
+                    Antibiotic
+                </h1>
+                <h1 class="last">
+                    resistance
+                </h1>
+            </div>
+
             <div class="graph">
                 <svg id="graph-1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 317.16 214.93">
                     <title>Grey Graph</title>
@@ -118,8 +126,6 @@
         </div>
 
     </div>
-
-    <div id="impress-toolbar"></div>
 
 
     <script src="./lib/impress.js"></script>
